[project]
name = "llmagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=0.4.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.70.0",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
